--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL = postgresql+asyncpg://postgres:postgres@localhost:5432/result_processing_db
-SYNC_DATABASE_URL = postgresql://postgres:postgres@localhost:5432/result_processing_db
+SYNC_DATABASE_URL = postgresql+psycopg2://postgres:postgres@localhost:5432/result_processing_db
 SECRET_KEY = verysecret
 ALGORITHM = HS256
 ACCESS_TOKEN_EXPIRE_MINUTES = 60
