--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: result_processing_system_backend_dev
+    container_name: edutrack_backend_dev
     env_file: .env
     ports:
       - "8000:8000"
@@ -16,7 +16,7 @@ services:
 
   db:
     image: postgres:16
-    container_name: result_processing_system_db_dev
+    container_name: edutrack_db_dev
     env_file: .env
     ports:
       - "5433:5432"
